config gulp for static resource

--- a/views/layout.html
+++ b/views/layout.html
@@ -4,8 +4,7 @@
     <title>Soofruit</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <link rel='stylesheet' type="text/css" href='/common.css'>
-    <link rel='stylesheet' type="text/css" href='/mobile.css'>
+    <link rel='stylesheet' type="text/css" href='/app.css'>
 </head>
 <body ng-app="app">
 
@@ -40,9 +39,8 @@
     </ul>
 </nav>
 
-<script type="text/javascript" src='../public/scripts/angular.js'></script>
-<script type="text/javascript" src='../public/scripts/angular-route.js'></script>
-<script type="text/javascript" src='views/routes.js'></script>
+<script type="text/javascript" src='/public/common.js'></script>
+<script type="text/javascript" src='/public/app.js'></script>
 
 
 </body>
