--- a/views/layout.html
+++ b/views/layout.html
@@ -39,8 +39,8 @@
     </ul>
 </nav>
 
-<script type="text/javascript" src='/public/common.js'></script>
-<script type="text/javascript" src='/public/app.js'></script>
+<script type="text/javascript" src='/common.js'></script>
+<script type="text/javascript" src='/app.js'></script>
 
 
 </body>
